--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<title>Document</title>
 </head>
 <body>	
-	<script src="./dist/memento.js"></script>
+	<script src="./dist/chain.js"></script>
 </body>
 </html>
